name:                GUI-Practice
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/GUI-Practice#readme
license:             BSD3
license-file:        LICENSE
author:              Crazycolorz5
maintainer:          Crazycolorz5@gmail.com
copyright:           2016 Crazycolorz5
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable GUI-Practice
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       text,
                       linear,
                       Yampa,
                       time,
                       monad-loops
